# Nuflie_pjt

./: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  README.md  key  key.pub
3rd_src/gcc_64/: .tag
3rd_src/gcc_64/lib/: libQt53DCore.la  libQt53DCore.prl  libQt53DExtras.la  libQt53DExtras.prl  libQt53DInput.la  libQt53DInput.prl  libQt53DLogic.la  libQt53DLogic.prl  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DRender.la  libQt53DRender.prl  libQt5AccessibilitySupport.la  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bootstrap.la  libQt5CLucene.la  libQt5CLucene.prl  libQt5Charts.la  libQt5Charts.prl  libQt5Charts.so.5.8.0  libQt5Concurrent.la  libQt5Core.la  libQt5DBus.la  libQt5DataVisualization.la  libQt5DataVisualization.prl  libQt5DataVisualization.so.5.8.0  libQt5Designer.la  libQt5Designer.prl  libQt5DesignerComponents.la  libQt5DesignerComponents.prl  libQt5DeviceDiscoverySupport.la  libQt5EglFSDeviceIntegration.la  libQt5EglSupport.la  (+98 more)
3rd_src/gcc_64/lib/cmake/Qt5WebEngine/: Qt5WebEngineConfig.cmake
3rd_src/gcc_64/lib/cmake/Qt5WebEngineCore/: Qt5WebEngineCoreConfig.cmake
3rd_src/gcc_64/lib/cmake/Qt5WebEngineWidgets/: Qt5WebEngineWidgetsConfig.cmake
3rd_src/gcc_64/lib/pkgconfig/: Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Charts.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5DataVisualization.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5NetworkAuth.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PrintSupport.pc  Qt5Purchasing.pc  Qt5Qml.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5Script.pc  Qt5ScriptTools.pc  Qt5Scxml.pc  Qt5Sensors.pc  Qt5SerialBus.pc  (+16 more)
3rd_src/mavlink/common/: common.h  mavlink_msg_mission_item.h
ground_station/nugc/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ground_station/nugc/include/: nugc.h  nugc.h.autosave  nugc.h~
ground_station/nugc/src/: main.cpp  nugc.cpp  obstacles.cpp~  world_model.cpp~
smarteye/Sensor_Process/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
smarteye/Sensor_Process/include/sensor_process/: GPS.h  IMU.h  camera.h  sensor_process.h  sonar.h
smarteye/Sensor_Process/launch/: nubot_control.launch
smarteye/Sensor_Process/src/: Camera.cpp~  GPS.cpp  IMU.cpp  camera.cpp  info_fuse.cpp~  main.cpp  sensor_process.cpp  sensors_process.cpp  sonar.cpp
smarteye/WorldModel/: CMakeLists.txt  Key.h  package.xml  package.xml~
smarteye/WorldModel/config/: nuflie.conf  nuflie.conf~  rtdb.ini
smarteye/WorldModel/include/smarteye/world_model/: AngleCount.h~  Key.h~  MyPosition.h~  PoseStamped.h~  UAV2UAVInfo.h~  UAV2stationInfo.h~  WorldModel.h  common.h~  keyboard.h  obstacles.h  station2UAV.h~  station2UAVInfo.h~
smarteye/WorldModel/launch/: 0415test.launch~  gazebo_px4_offboard.launch~  smarteye.launch  smarteye.launch~  test.launch  test.launch~
smarteye/WorldModel/src/: WorldModel.cpp  main.cpp  obstacles.cpp  test.cpp
smarteye/comm/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
smarteye/comm/include/: LinkInterface.h  MavlinkHandler.h  MavlinkHandler.h~  QGCMAVLink.h  SerialLink.h  comm.h  definitions.h
smarteye/comm/src/: LinkConfiguration.cpp  LinkInterface.cpp  MavlinkHandler.cpp  MavlinkHandler.cpp~  SerialLink.cpp  bridge.cpp  comm.cpp  main.cpp
smarteye/control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
smarteye/control/cfg/: NuFliecontrol.cfg
smarteye/control/include/: FlightCtrl.h  behaviour.h  control.h  plan.h  strategy.h
smarteye/control/launch/: nubot_control.launch~
smarteye/control/src/: behaviour.cpp  control.cpp  main.cpp  plan.cpp  strategy.cpp
smarteye/objcontroller/px4_controller/: CMakeLists.txt  package.xml
smarteye/objcontroller/px4_controller/config/: px4.yaml  px4.yaml~
smarteye/objcontroller/px4_controller/include/: Px4Controller.h
smarteye/objcontroller/px4_controller/launch/: node.launch~  px4.launch~  px4_control.launch~  px4_controller.launch~
smarteye/objcontroller/px4_controller/msg/: count.msg  count.msg~  download.msg  download.msg~  upload.msg  upload.msg~
smarteye/objcontroller/px4_controller/src/: main.cpp  px4Controller.cpp
smarteye_common/: CMakeLists.txt  package.xml  package.xml~
smarteye_common/core/include/smarteye/core/: MathCal.h  core.hpp  core.hpp~
smarteye_common/core/src/: MathCal.cpp
smarteye_common/msgs/: ConsensusInfo.msg~  ConsensusType.msg~  InstructionInfo.msg~  UAVInfo.msg~  WorldModelInfo.msg~
smarteye_common/msgs/comm/: flightStateMsg.msg  flightStateMsg.msg~
smarteye_common/msgs/control/: behaviorMsg.msg~  controlMsg.msg  planMsg.msg~
smarteye_common/msgs/sensor_process/: GPSInfo.msg~  sensorMsg.msg  sonarMsg.msg
smarteye_common/msgs/world_model/: FeedbackMsg.msg~  UAV2UAVMsg.msg  UAV2UAVType.msg  UAV2stationMsg.msg  UAVMsg.msg  WorldModelMsg.msg  WorldModelMsg.msg~  imgTransMsg.msg~  station2UAVMsg.msg
